cli/crates/zero-tui/tests/snapshots/snapshots__conversation_with_prompt.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
18:30:00 zero — deterministic test harness                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> /help                                                                         
 [CONV] engine:DOWN  feed:--  rate:?  hl:?  dd:--  ops:?
