cli/crates/zero-tui/tests/snapshots/snapshots__conversation_with_tilt_label.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
18:30:00 deterministic test                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
>                                                                               
 [CONV] engine:DOWN  feed:--  rate:?  hl:?  dd:--  ops:TILT
