cli/crates/zero-tui/tests/snapshots/snapshots__heat_with_risk_ok.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
 heat                                                                           
                                                                                
 risk: OK  dd:0.8%  daily-loss:0.2%  open:1                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
>                                                                               
 [HEAT] engine:DOWN  feed:0s  rate:?  hl:?  dd:0.8%  ops:?
