cli/crates/zero-tui/tests/snapshots/snapshots__multiline_prompt_two_rows.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
18:30:00 zero — deterministic test harness                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
> line one                                                                      
. line two                                                                      
 [CONV] engine:DOWN  feed:--  rate:?  hl:?  dd:--  ops:?
