cli/crates/zero-tui/tests/snapshots/snapshots__responsive_200_cols.snap
---
source: crates/zero-tui/tests/snapshots.rs
expression: snap
---
18:30:00 deterministic test                                                                                                                                                                             
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
>                                                                                                                                                                                                       
 [CONV] engine:OK  feed:0s  rate:?  hl:?  dd:2.5%  ops:ELEVATED
